syntax = "proto3";
package fish;
option go_package = "pkg/protos";

import "google/protobuf/empty.proto";

service HasherService {
  // Hashes an image from a URL and adds it to the database
  rpc AddImageFromURL(AddImageFromURLRequest) returns (AddImageResponse);
  // Deletes an image from the database
  rpc RemoveImage(RemoveImageRequest) returns (google.protobuf.Empty);
}

message ImageHashes {
  string md5 = 1;
  string sha256 = 2;
  string pHash = 3;
}

message AddImageFromURLRequest {
  string url = 1;
}

message AddImageResponse {
  int64 id = 1;
  ImageHashes hashes = 3;
}

message RemoveImageRequest {
  int64 id = 1;
}
